--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>iQuall</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -13,6 +13,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
   <body ng-app="demoApp">
     <!--[if lte IE 8]>
@@ -32,28 +34,60 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">demo</a>
+            <a class="navbar-brand" href="#/">
+              i<span class="oui">Q</span>uall
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/">Contacto</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="container">
-    <div ng-view=""></div>
-    </div>
-
+    <div ng-view></div>
+    
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <div class="row">
+          <div class="col-md-6">
+            <h3>
+              Cobertura de señal
+            </h3>
+            <p>
+              Demostracion de conbertura asistida de nuestros servicios
+            </p>
+          </div>
+          <div class="col-md-3">
+            <h3>Soporte</h3>
+            <ul>
+              <li>Ticket de Soporte</li>
+              <li>Como funciona</li>
+              <li>Estado del servicio</li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h3>Contacto</h3>
+            <ul>
+              <li>Telefono: <a href="#">+54 9 1112345678</a></li>
+              <li>E-mail: <a href="#">info@miempresa.com.ar</a></li>
+              <li>Facebook: <a href="#">@miempresa</a></li>
+              <li>Linkedin: <a href="#">@miempresa</a></li>
+              <li>Twitter: <a href="#">@miempresa</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="pull-right">
+              Desarrollado por <a href="//danielnaranjo.info" target="_blank">Daniel Naranjo</a>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -86,7 +120,6 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
         <!-- endbuild -->
 </body>
 </html>
