--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en" ng-app="demoApp">
   <head>
     <meta charset="utf-8">
     <title>iQuall</title>
@@ -8,15 +8,16 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.css' />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Roboto:300' rel='stylesheet' type='text/css'> -->
+    <!-- <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'> -->
   </head>
-  <body ng-app="demoApp">
+  <body>
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -35,14 +36,23 @@
             </button>
 
             <a class="navbar-brand" href="#/">
-              i<span class="oui">Q</span>uall
+              i<span class="oui">Q</span>uall status
             </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="#/">Home</a></li>
+              <li><a href="#/all">Listado</a></li>
+            </ul>
             <ul class="nav navbar-nav pull-right">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/">Contacto</a></li>
+              <li>
+                <form action="" class="navbar-form navbar-right">
+                  <div class="form-group">
+                    <input ng-model="data" class="form-control" type="search" placeholder="Filtrar por..">
+                  </div>
+                </form>
+              </li>
             </ul>
           </div>
         </div>
@@ -59,7 +69,7 @@
               Cobertura de señal
             </h3>
             <p>
-              Demostracion de conbertura asistida de nuestros servicios
+              Demostracion de cobertura asistida de nuestros servicios
             </p>
           </div>
           <div class="col-md-3">
@@ -75,15 +85,15 @@
             <ul>
               <li>Telefono: <a href="#">+54 9 1112345678</a></li>
               <li>E-mail: <a href="#">info@miempresa.com.ar</a></li>
-              <li>Facebook: <a href="#">@miempresa</a></li>
-              <li>Linkedin: <a href="#">@miempresa</a></li>
+              <li>Facebook: <a href="#">Mi Empresa, S.A.</a></li>
+              <li>Linkedin: <a href="#">Mi Empresa, S.A.</a></li>
               <li>Twitter: <a href="#">@miempresa</a></li>
             </ul>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p class="pull-right">
+            <p>
               Desarrollado por <a href="//danielnaranjo.info" target="_blank">Daniel Naranjo</a>
             </p>
           </div>
@@ -102,6 +112,7 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -114,12 +125,18 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
+    <script src="bower_components/angular-loading-bar/build/loading-bar.js"></script>
+    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/all.js"></script>
         <!-- endbuild -->
+
+    <script src="http://angulargm.herokuapp.com/angular-gm-0.2.0.min.js"></script>
 </body>
 </html>
