--- a/app/index.html
+++ b/app/index.html
@@ -89,7 +89,7 @@
               Demostracion de cobertura asistida de nuestros servicios
             </p>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-6">
             <h3>Soporte</h3>
             <ul>
               <li>Ticket de Soporte</li>
@@ -97,7 +97,7 @@
               <li>Estado del servicio</li>
             </ul>
           </div>
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-6">
             <h3>Contacto</h3>
             <ul>
               <li>Telefono: <a href="#">+54 9 1112345678</a></li>
