--- a/app/index.html
+++ b/app/index.html
@@ -45,15 +45,15 @@
               <li><a href="#/">Home</a></li>
               <li><a href="#/all">Listado</a></li>
             </ul>
-            <ul class="nav navbar-nav pull-right">
+            <!-- <ul class="nav navbar-nav pull-right">
               <li>
                 <form class="navbar-form navbar-right" ng-controller="MainCtrl" ng-click="searchable()">
                   <div class="form-group">
-                    <input ng-model="data" class="form-control" type="search" placeholder="Filtrar por..">
+                    <input ng-model="data.filtrar" class="form-control" type="search" placeholder="Filtrar por..">
                   </div>
                 </form>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </div>
